--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
-title: Octocat's homepage
+theme: mediumish-theme-jekyll
+title: Andrew's Portfolio
 description: Bookmark this to keep an eye on my project updates!
