--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: mediumish-theme-jekyll
+theme: jekyll-theme-minimal
 title: Andrew's Portfolio
 description: Bookmark this to keep an eye on my project updates!
