--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Andrew's Portfolio
-description: Projects I'm working on. The site is still a work in progress! All projects since January 2022 are for my new game, "Ship Crew RPG" (still looking for a good name!)
+description: Projects I'm working on. The site is still a work in progress!\n\n All projects since January 2022 are for my new game, "Ship Crew RPG" (still looking for a good name!)
