--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Andrew's Portfolio (Home)
-description: I make games and tech demos
+description: I make games and tech demos. More info on my github!
